# Graphics

./: .gitignore
BasicMeshLoading/: BasicMeshLoading.sln
BasicMeshLoading/BasicMeshLoading/: BasicMeshLoading.cpp  BasicMeshLoading.vcxproj  BasicMeshLoading.vcxproj.filters
ComputeShaderExample/: ComputeShaderExample.sln
ComputeShaderExample/ComputeShaderExample/: ComputeShaderExample.cpp  ComputeShaderExample.vcxproj  ComputeShaderExample.vcxproj.filters  GLUtilities.cpp  GLUtilities.h  ReadMe.txt  ShaderProgram.cpp  ShaderProgram.h  stdafx.cpp
DeferredRendering/: CMakeLists.txt
DeferredRendering/src/: FBXLoader.cpp  FBXLoader.h  main.cpp
DeferredRendering/src/AssetLoader/: FBXLoader.h
DeferredRendering/src/Common/: SceneData.h
DeferredRendering/src/Engine/: Engine.cpp  Engine.h
DeferredRendering/src/Engine/Core/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h
DeferredRendering/src/Resources/: Material.cpp  Material.h  Mesh.h  PbrShader.cpp  PbrShader.h  ResourceManager.h  Shader.h  Texture.h
DirectXTriangle/: DirectXTriangle.sln
DirectXTriangle/DirectXTriangle/: DirectXTriangle.cpp  DirectXTriangle.vcxproj  Shader.hlsl  d3dx12.h
ECS/: CMakeLists.txt
ECS/src/: main.cpp
ECS/src/AssetLoader/: FBXLoader.cpp  FBXLoader.h
ECS/src/Common/: SceneData.h
ECS/src/ECS/: Components.h  Entity.cpp  Entity.h  SceneRegistry.cpp  SceneRegistry.h
ECS/src/Engine/: Engine.cpp  Engine.h
ECS/src/Engine/Core/: Components.h
ECS/src/Resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  PbrShader.cpp  PbrShader.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
ECS/src/Systems/: RenderSystem.cpp  RenderSystem.h  System.h  SystemManager.cpp  SystemManager.h
ECS/src/Window/: GLFWWindow.cpp  GLFWWindow.h  Window.h
LayeredDepthImageImplementation/: LayeredDepthImageImplementation.sln
LayeredDepthImageImplementation/LayeredDepthImageImplementation/: LayeredDepthImageImplementation.cpp  LayeredDepthImageImplementation.vcxproj  LayeredDepthImageImplementation.vcxproj.filters  ReadMe.txt  ShaderUtil.cpp  ShaderUtil.h  SimpleMeshRenderer.cpp  SimpleMeshRenderer.h  WavefrontObjectIO.cpp  WavefrontObjectIO.h  stdafx.cpp
OpenGLGeometryShader/: OpenGLGeometryShader.sln
OpenGLGeometryShader/OpenGLGeometryShader/: OpenGLGeometryShader.cpp  OpenGLGeometryShader.vcxproj
OpenGLInstancingExample/: OpenGLInstancingExample.sln
OpenGLInstancingExample/OpenGLInstancingExample/: OpenGLInstancingExample.cpp  OpenGLInstancingExample.vcxproj
SaveTextureToBitmap/: SaveTextureToBitmap.sln
SaveTextureToBitmap/SaveTextureToBitmap/: BitmapUtil.h  SaveTextureToBitmap.cpp  SaveTextureToBitmap.vcxproj  glutils.h
